--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #0f0f1e; /* Dark background */
+      background-color: transparent; /* Dark background */
       color: white;
       margin: 0;
       padding: 0;
