--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+background-color:red;
       color: white;
       margin: 0;
       padding: 0;
