--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       margin-left: 16%;
       align-items:center;
       justify-content:start;
-      background-color: #0f0f1e;
+      background-color: #1d1d25;
     /* background-color: red; */
     margin-bottom: 5px;
     /* height: 50px; */
